--- a/programming/python/cool-projects/1-number-guessing.html
+++ b/programming/python/cool-projects/1-number-guessing.html
@@ -42,7 +42,7 @@ while True:
 import random
 num = random.randint(1, 100)
 while True:
-    guess = int(input("Guess A Number Between 1 and 100: "))
+    guess = int(input("Guess a number between 1 and 100: "))
     if guess > num:
         print("Your number is too high!")
     elif guess &lt; num:
