--- a/programming/python/cool-projects/1-number-guessing.html
+++ b/programming/python/cool-projects/1-number-guessing.html
@@ -42,9 +42,9 @@ while True:
 import random
 num = random.randint(1, 100)
 while True:
-    guess = int(input("Guess a number between 1 and 100: "))
+    guess = int(input("Guess A Number Between 1 and 100: "))
     if guess > num:
-        print("Your number is too high!")
+        print("Your Number Ns Too High!")
     elif guess &lt; num:
         print("Your number is too low!")
     else:
