--- a/programming/python/cool-projects/4-trivia-game.html
+++ b/programming/python/cool-projects/4-trivia-game.html
@@ -5,4 +5,12 @@ permalink: /programming/python/cool-projects/4-trivia-game/
 ---
 
 <h1>Python Trivia Game</h1>
-<p></p>
+<p>In this tutorial, we'll create a simple <i>command line interface</i> (CLI) program that runs a quick game of trivia.</p>
+
+<section>
+    <h2>Making Questions</h2>
+    <p>For our trivia game, we'll need to make some questions and store them for our program mto access. We'll have them in this format:</p>
+    <pre><code class="language-python">
+questions = [{"question" : "Who created Python?", "possible" : ["Guido Van Rossum", "Donald Trump", "Isaac Newton", "Michael Jackson", "correct" : "Guido Van Rossum"]}]
+    </code></pre>
+</section>
