--- a/programming/python/cool-projects/1-number-guessing.html
+++ b/programming/python/cool-projects/1-number-guessing.html
@@ -44,7 +44,7 @@ num = random.randint(1, 100)
 while True:
     guess = int(input("Guess A Number Between 1 and 100: "))
     if guess > num:
-        print("Your Number Ns Too High!")
+        print("Your Number Is Too High!")
     elif guess &lt; num:
         print("Your number is too low!")
     else:
