--- a/programming/python/cool-projects/1-number-guessing.html
+++ b/programming/python/cool-projects/1-number-guessing.html
@@ -46,7 +46,7 @@ while True:
     if guess > num:
         print("Your Number Is Too High. Try Again!")
     elif guess &#60; num:
-        print("Your number Is Too Low! Try Again!")
+        print("Your number Is Too Low. Try Again!")
     else:
         print(f"Correct! The Number Was {str(num)}.")
         break
