--- a/programming/python/cool-projects/1-number-guessing.html
+++ b/programming/python/cool-projects/1-number-guessing.html
@@ -52,7 +52,7 @@ while True:
         break
     </code></pre>
     <p>We want to tell the player if they guessed too low, too high, or if they got the number! We can just use some quick <code>if-statements</code>.</p>
-    <p>You can also find the code</p>
+    <p>You can also find the code <a href="https://github.com/ThePeeps191/quick-projects/blob/main/number%20guessing%20game/main.py" target="_blank">here</a>.</p>
     <p>And then, you're done. Congrats!</p>
 </section>
 
