--- a/programming/python/cool-projects/4-trivia-game.html
+++ b/programming/python/cool-projects/4-trivia-game.html
@@ -9,7 +9,7 @@ permalink: /programming/python/cool-projects/4-trivia-game/
 
 <section>
     <h2>Making Questions</h2>
-    <p>For our trivia game, we'll need to make some questions and store them for our program mto access. We'll have them in this format:</p>
+    <p>For our trivia game, we'll need to make some questions and store them for our program to access. We'll have them in this format:</p>
     <pre><code class="language-python">
 questions = [{"question" : "Who created Python?", "possible" : ["Guido Van Rossum", "James Gosling", "Donald Knuth", "Dennis Ritchie"], "correct" : "Guido Van Rossum"}]
     </code></pre>
