--- a/programming/python/cool-projects/4-trivia-game.html
+++ b/programming/python/cool-projects/4-trivia-game.html
@@ -9,10 +9,19 @@ permalink: /programming/python/cool-projects/4-trivia-game/
 
 <section>
     <h2>Making Questions</h2>
-    <p>For our trivia game, we'll need to make some questions and store them for our program to access. We'll have them in this format:</p>
+    <p>For our trivia game, we'll need to make some questions and store them for our program mto access. We'll have them in this format:</p>
     <pre><code class="language-python">
 questions = [{"question" : "Who created Python?", "possible" : ["Guido Van Rossum", "James Gosling", "Donald Knuth", "Dennis Ritchie"], "correct" : "Guido Van Rossum"}, {"question" : "What is the oldest American university?", "possible" : ["Harvard University", "Yale University", "College of William and Mary", "Massachusetts Institute of Technology"], "correct" : "Harvard University"}]
     </code></pre>
     <p>Notice how the <code>questions</code> variable is a list of dictionaries, which contain the question name, possible answers, and correct answer.</p>
     <p>We will then put this in a Python file called <code>questions.py</code> so we can more easily access it. So, whenever we need to access the questions, we can simply type <code>import questions</code> and use it as <code>questions.questions</code>.</p>
+</section>
+
+<section>
+    <h2>Making the App</h2>
+    <p>Now, it's time to make our app, which will run in the command line. First of all, we need to import the things we need: </p>
+    <pre><code class="language-python">
+import questions # import the list of questions
+import random # we'll use this for randomizing the questions and answers
+    </code></pre>
 </section>
