--- a/programming/python/cool-projects/2-counter-app.html
+++ b/programming/python/cool-projects/2-counter-app.html
@@ -50,3 +50,12 @@ window.mainloop()
     <p>We then create a <code>Button</code> object with the text of "Click Me!". We set the <code>command</code> object to the <code>increment_counter</code> function we defined earlier. Then, we use the <code>pack()</code> method.</p>
     <p>Finally, we run <code>window.mainloop()</code> to actually display the window and listen for events like button clicks.</p>
 </section>
+
+<section>
+    <h2>Extensions</h2>
+    <p>Fun extension ideas:</p>
+    <ul>
+        <li>Make the GUI look prettier</li>
+        <li>Make multiple buttons</li>
+    </ul>
+</section>
