--- a/programming/python/cool-projects/4-trivia-game.html
+++ b/programming/python/cool-projects/4-trivia-game.html
@@ -66,3 +66,14 @@ except IndexError:
     <p>Finally, we can run our code. Try a few different test cases and see if it works!</p>
     <p>You can find the full code for the tutorial <a href="https://github.com/calgary34/python-trivia-app">here</a>.</p>
 </section>
+
+section>
+    <h2>Extensions</h2>
+    <p>Fun extension ideas:</p>
+    <ul>
+        <li>Make a multiple players version</li>
+        <li>Allow points for each question the player gets correct</li>
+        <li>Make the program into a Trivia website</li>
+        <li>Add more questions</li>
+    </ul>
+</section>
