--- a/programming/python/cool-projects/5-password-generator.html
+++ b/programming/python/cool-projects/5-password-generator.html
@@ -1,70 +1,8 @@
 ---
 layout: python-cool-projects
-title: Number Guessing Game
-permalink: /programming/python/cool-projects/1-number-guessing/
+title: Password Generator
+permalink: /programming/python/cool-projects/5-password-generator/
 ---
 
-<h1>Number Guessing Game</h1>
+<h1>Password Generaor</h1>
 <p>In this tutorial, we'll create a simple number guessing game that will have the user guess a number between 1 and 100. Our guessing game will run in the command line, so we are making a <i>command line interface</i> (CLI).</p>
-
-<section>
-    <h2>The <code>random</code> module</h2>
-    <p>In order to generate or random numbers, we need to use the built-in Python module <code>random</code>. It's used for generating random data, such as random integers and choosing random elements from a list.</p>
-</section>
-
-<section>
-    <h2>Generating Random Numbers</h2>
-    <p>In the <code>random</code> module, we have a useful function called <code>randint</code> which takes two parameters (two numbers), <code>a</code> and <code>b</code>, and generates a random integer (whole number) between them inclusive. So, for example, I could run <code>randint(5, 10)</code> and get <code>5</code>, <code>6</code>, <code>7</code>, <code>8</code>, <code>9</code>, or <code>10</code>. This is what we are going to use in our game.</p>
-</section>
-
-<section>
-    <h2>Using <code>randint</code></h2>
-    <p>We've already discussed how <code>randint</code> works, so now let's implement our game!</p>
-    <p>But, before we start using <code>randint</code> and the <code>random</code> module, we'll need to import it. We can simply do this by writing</p>
-    <pre><code class="language-python">import random</code></pre>
-    <p>After, we can access the <code>randint</code> function using <code>random.randint</code>.</p>
-    <p>So, therefore, we can generate a random number between 1 and 100 using</p>
-    <pre><code class="language-python">num = random.randint(1, 100)</code></pre>
-    <p>We save the number into the variable <code>num</code> for use in our game</p>
-</section>
-
-<section>
-    <h2>Implementing The Game</h2>
-    <p>First, we want a <i>while</i> loop for our game, so the user can enter guesses over and over until they get it. And, before the loop, we will add the <code>randint</code> code.</p>
-    <pre><code class="language-python">
-import random
-num = random.randint(1, 100)   
-while True:
-    guess = int(input("Guess A Number Between 1 and 100: "))
-    </code></pre>
-    <p>After, we just need to add some <code>if</code> statements for the logic:</p>
-    <pre><code class="language-python">
-import random
-num = random.randint(1, 100)
-while True:
-    guess = int(input("Guess A Number Between 1 and 100: "))
-    if guess > num:
-        print("Your Number Is Too High. Try Again!")
-    elif guess &#60; num:
-        print("Your number Is Too Low. Try Again!")
-    else:
-        print(f"Correct! The Number Was {str(num)}.")
-        break
-    </code></pre>
-    <p>We want to tell the player if they guessed too low, too high, or if they got the number! We can just use some quick <code>if-statements</code>.</p>
-    <p>You can also find the code <a href="https://github.com/ThePeeps191/quick-projects/blob/main/number%20guessing%20game/main.py" target="_blank">here</a>.</p>
-    <p>And then, you're done. Congrats!</p>
-</section>
-
-<section>
-    <h2>Extensions</h2>
-    <p>Fun extension ideas:</p>
-    <ul>
-        <li>Give the user a limited number of guesses</li>
-        <li>Add a feature for hints on the number (even or odd, etc.)</li>
-        <li>Allow the player to replay after guessing the number</li>
-        <li>Add a points system</li>
-        <li>Let the user quit in the game</li>
-        <li>Make a version of the game using a graphical user interface</li>
-    </ul>
-</section>
