--- a/programming/golang/input.html
+++ b/programming/golang/input.html
@@ -13,7 +13,7 @@ layout: golang
 
 <section>
     <h2>The <code>Scan()</code> function</h2>
-    <p>The <code>Scan()</code> function, as well as all the other functions we will be discussing in this tutorial, is in the built-in <code>fmt</code> module, so we need to type <code>import "fmt"</code> before using these functions.</p>
+    <p>The <code>Scan()</code> function, as well as all the other functions we will be discussing in this tutorial, is in the built-in <code>fmt</code> module, so we need to type <code>import "fmt"</code> before using these functions, as always.</p>
     <p>The <code>Scan()</code> function receives raw user input as space-seperated values and stores them in variables. Newlines count as spaces. For example: </p>
     <pre><code class="language-go">
 
