--- a/programming/golang/more-on-printing.html
+++ b/programming/golang/more-on-printing.html
@@ -8,7 +8,7 @@ layout: golang
 
 <section>
 	<h2>What is Printing?</h2>
-	<p>In the last tutorial when we made our first program, we wrote <samp>Hello, World!</samp> in the <i>Terminal/Command Prompt</i>. In programming, we call this <u>printing</u>. Printing is an essential but basic part of programming; It's just writing text in the console. If we wanted to create a text-based game, we would use print to show the text in the terminal.</p>
+	<p>In the last tutorial when we made our first program, we wrote <samp>Hello, World!</samp> in the <em>command line</em>. Displaying text in the command line is called printing. Printing is a very important part of of programming. Printing can be used to make things such as text-based games and is also used for simple debugging and testing.</p>
 </section>
 
 <section>
