--- a/programming/golang/more-on-printing.html
+++ b/programming/golang/more-on-printing.html
@@ -13,7 +13,7 @@ layout: golang
 
 <section>
 	<h2>How can I print text in Go?</h2>
-	<p>We already know that we can simply write <code class="language-go">fmt.Println(<i>text</i>)</code> to print stuff in Go. We can change text to be any <a href="/programming/golang/data-types/">Data Type</a> we want (to learn more about Data Types, click the link to see our Data Types tutorial)!</p>
+	<p>We already know that we can simply write <code class="language-go">fmt.Println(<i>text</i>)</code> to print stuff in Go. We can change text to be any <a href="/programming/golang/data-types/">data type</a> we want.</p>
 </section>
 
 <section>
