--- a/programming/python/cool-projects/5-password-generator.html
+++ b/programming/python/cool-projects/5-password-generator.html
@@ -5,4 +5,4 @@ permalink: /programming/python/cool-projects/5-password-generator/
 ---
 
 <h1>Password Generaor</h1>
-<p>In this tutorial, we'll create a password generator in Python that prompts the user for details such as the length of the password, the number of digits, the number of letters, etc. The password generator will run in the command line, so we are making a <i>command line interface</i> (CLI).</p>
+<p>In this tutorial, we'll create a password generator in Python that prompts the user for details such as the length of the password, the number of digits, the number of letters, etc. The password generator will run in the command line, so we are making a <i>command line interface</i> (CLI) program.</p>
