quick little new section

--- a/programming/golang/data-types.html
+++ b/programming/golang/data-types.html
@@ -50,3 +50,8 @@ var percentage float64 = 2.4563543
 var bankAccountBalance float32 = -1643.95
     </code></pre>
 </section>
+
+<section>
+    <h2>Making Your Own Data Types</h2>
+    <p>You can make our own custom complex data types using <a href="/programming/golang/structs/">structs</a>.</p>
+</section>
