add troubleshooting pip article link

--- a/programming/python/pymongo/setup.html
+++ b/programming/python/pymongo/setup.html
@@ -17,6 +17,7 @@ permalink: /programming/python/pymongo/setup/
     <pre><code class="language-bat">
 pip install pymongo
     </code></pre>
+    <small>If PIP doesn't work, read our <a href="/programming/python/articles/troubleshooting-pip/">Troubleshooting PIP</a> article.</small>
     <p>After using PIP, run the following Python code to test if you installed it correctly: </p>
     <pre><code class="language-python">
 import pymongo
