--- a/programming/golang/input.html
+++ b/programming/golang/input.html
@@ -28,6 +28,8 @@ func main() {
     fmt.Println("Your Last Name Is", lname)
 }
     </code></pre>
+    <br>
+    <p>By running this code in the command line, we get a simple program that asks you for your name. Try entering a first name and a last name, seperated by spaces</p>
 </section>
 
 <section>
