--- a/programming/golang/input.html
+++ b/programming/golang/input.html
@@ -29,7 +29,14 @@ func main() {
 }
     </code></pre>
     <br>
-    <p>By running this code in the command line, we get a simple program that asks you for your name. Try entering a first name and a last name, seperated by spaces</p>
+    <p>By running this code in the command line, we get a simple program that asks you for your name. Try entering a first name and a last name, seperated by spaces, like "<code>Chunky Monkey</code>" and then the program prints out your name:</p>
+    <samp>Your First Name Is Chunky
+Your Last Name Is Monkey</samp>
+</section>
+
+<section>
+    <h3>Code Breakdown</h3>
+    <p></p>
 </section>
 
 <section>
