add some trivia game extension ideas

--- a/programming/python/cool-projects/4-trivia-game.html
+++ b/programming/python/cool-projects/4-trivia-game.html
@@ -67,13 +67,15 @@ except IndexError:
     <p>You can find the full code for the tutorial <a href="https://github.com/calgary34/python-trivia-app">here</a>.</p>
 </section>
 
-section>
+<section>
     <h2>Extensions</h2>
     <p>Fun extension ideas:</p>
     <ul>
-        <li>Make a multiple players version</li>
-        <li>Allow points for each question the player gets correct</li>
-        <li>Make the program into a Trivia website</li>
         <li>Add more questions</li>
+        <li>Use a JSON file for the data instead</li>
+        <li>Add the ability to create questions</li>
+        <li>Allow points for each question the player gets correct</li>
+        <li>Allow the player to have a quiz session with a set amount of questions</li>
+        <li>Make the program into a web app (using something like <a href="/programming/python/flask/">Flask</a>)</li>
     </ul>
 </section>
