discord.py intro expand

--- a/programming/python/discord-py/index.html
+++ b/programming/python/discord-py/index.html
@@ -8,5 +8,18 @@ permalink: /programming/python/discord-py/
 
 <section>
     <h2>What is Discord.py?</h2>
-    <p>Discord.py is a Python module for creating Discord bots.</p>
+    <p>Discord.py is an easy-to-use Python module for creating Discord bots. Currently, there are two versions of Discord.py. The new one is called Discord.py rewrite, and it will be the one that will be used.</p>
+</section>
+
+<section>
+    <h2>Features</h2>
+    <p>Practically everything that Discord has to offer can be used with Discord.py. Some features include: </p>
+    <ul>
+        <li>Sending and Receiving Message</li>
+        <li>Logging Activity</li>
+        <li>Creating Embeds</li>
+        <li>Server Moderation</li>
+        <li>Playing Sounds</li>
+        <li>And much more!</li>
+    </ul>
 </section>
