--- a/programming/python/discord-py/setup.html
+++ b/programming/python/discord-py/setup.html
@@ -10,10 +10,10 @@ permalink: /programming/python/discord-py/setup/
     <h2>Creating a Discord Bot</h2>
     <p>To use Discord.py, we of course need a Discord bot.</p>
     <p>First of all, make sure you are signed in to Discord by going to the <a href="https://discord.com">website</a>.</p>
-    <p>Then, go to the Discord applications page and click the blue "New Application" button, which is located left of your Discord avatar: </p>
+    <p>Then, go to the Discord applications page and click the "New Application" button, which is located left of your Discord avatar: </p>
     <img src="/images/programming/python/discord-py/new-application-button.png">
     <p>You should then see a form with the name of the application. You can fill in whatever you want; it doesn't matter: </p>
     <img src="/images/programming/python/discord-py/new-application-form.png">
-    <p>Then, click on the "Bot" tab and click the blue "Add Bot" button: </p>
+    <p>Then, click on the "Bot" tab and click the "Add Bot" button: </p>
     <img src="/images/programming/python/discord-py/build-a-bot.png">
 </section>
