--- a/programming/python/cool-projects/5-password-generator.html
+++ b/programming/python/cool-projects/5-password-generator.html
@@ -9,5 +9,5 @@ permalink: /programming/python/cool-projects/5-password-generator/
 
 <section>
     <h2>The <code>string</code> Module</h2>
-    <p></p>
+    <p>In order to generate a random pasword, we'll need to allow the user to specify how </p>
 </section>
