--- a/programming/python/cool-projects/5-password-generator.html
+++ b/programming/python/cool-projects/5-password-generator.html
@@ -10,7 +10,7 @@ permalink: /programming/python/cool-projects/5-password-generator/
 <section>
     <h2>The <code>string</code> Module</h2>
     <p>In order to generate a random pasword, we'll need to allow the user to specify how many letters or digits or special characters to put in the password. To do so, we'll need to have the letters/digits/characters on hand for us to access. We can do this by using the <code>string</code> module that comes built-in with your default Python installation. We can use the <code>string</code> module by importing it.</p>
-    <pre><code class="language-python">import random</code></pre>
+    <pre><code class="language-python">import string</code></pre>
 </section>
 
 <section>
