new section + subsection

--- a/programming/python/cool-projects/5-password-generator.html
+++ b/programming/python/cool-projects/5-password-generator.html
@@ -15,5 +15,9 @@ permalink: /programming/python/cool-projects/5-password-generator/
 
 <section>
     <h2>Using The <code>string</code> Module</h2>
-    <p></p>
+    <p>We already know what the <code>string</code> module is, so now let's start using it.</p>
+    <section>
+        <h3>Generating Random Letters</h3>
+        <p>The <code>string</code> module</p>
+    </section>
 </section>
