--- a/programming/python/cool-projects/5-password-generator.html
+++ b/programming/python/cool-projects/5-password-generator.html
@@ -18,6 +18,6 @@ permalink: /programming/python/cool-projects/5-password-generator/
     <p>We already know what the <code>string</code> module is, so now let's start using it.</p>
     <section>
         <h3>Generating Random Letters</h3>
-        <p>The <code>string</code> module</p>
+        <p>The <code>string</code> module ships with a lot of useful variables. One of them is <code>ascii_letters</code>. We can access this by typing <code>string.ascii_letters</code>.</p>
     </section>
 </section>
