--- a/programming/python/discord-py/setup.html
+++ b/programming/python/discord-py/setup.html
@@ -32,4 +32,5 @@ pip install discord.py
     <pre><code class="language-python">
 import discord
     </code></pre>
+    <p>If you don't get any errors, then you have corectly installed Discord.py. Great! Now, let's get coding!</p>
 </section>
