discord.py expand

--- a/programming/python/discord-py/setup.html
+++ b/programming/python/discord-py/setup.html
@@ -22,6 +22,13 @@ permalink: /programming/python/discord-py/setup/
 </section>
 
 <section>
+    <h2>Making a Server</h2>
+    <p>Now, we need to make a server to test our bot in. Think of a server as a group chat but with more features.</p>
+    <p>To create a server, we first of all need to make sure we are signed into Discord. Then, we can begin using the <a href="https://discord.com/app">web version</a> of Discord. You can also download and use the <a href="https://discord.com/download">desktop version</a> of Discord.</p>
+    <p>Now, go to the left sidebar in Discord and click on the big plus sign. Then, you can follow through the form and make a server. The server name doesn't matter.</p>
+</section>
+
+<section>
     <h2>Installing Discord.py</h2>
     <p>To install Discord.py, run the following command in your command line: </p>
     <pre><code class="language-bat">
