discord.py setup inviting bot to server section

--- a/programming/python/discord-py/setup.html
+++ b/programming/python/discord-py/setup.html
@@ -29,6 +29,16 @@ permalink: /programming/python/discord-py/setup/
 </section>
 
 <section>
+    <h2>Inviting Our Bot to the Server</h2>
+    <p>now, we of course need our bot to be in the server. We can go to our bot application page and in the sidebar, click on the "OAuth2" tab. Once we click on it, we can see a subtab called "URL Generator". This is what we'll be using to generate the URL to invite our bot to our server: </p>
+    <img src="/images/programming/python/discord-py/url-generator-sidebar.png">
+    <p>Then, we can see a big box with lots of checkboxes with the label "Scopes". Check off the "bot" scope. Then, you should see a big box of permissions for our bot. Since we are only testing our bot and not actually using it, we can simply check of "Administrator" which gives the bot administrator permission: </p>
+    <img src="/images/programming/python/discord-py/url-generator-scopes.png">
+    <p>Then, below the bot permissions, you should see your generated URL. Copy it and paste it into your browser. Then, you can select the server you just created and now, you should see your bot is in the server!</p>
+    <img src="/images/programming/python/discord-py/url-generator-generated-url.png">
+</section>
+
+<section>
     <h2>Installing Discord.py</h2>
     <p>To install Discord.py, run the following command in your command line: </p>
     <pre><code class="language-bat">
