discord.py connecting to bot

--- a/programming/python/discord-py/your-first-discord-py-bot.html
+++ b/programming/python/discord-py/your-first-discord-py-bot.html
@@ -5,3 +5,15 @@ permalink: /programming/python/discord-py/your-first-discord-py-bot/
 ---
 
 <h1>Your First Discord.py Bot</h1>
+
+<section>
+    <h2>Connecting to the Bot</h2>
+    <p>To connect to the bot, we need to make a bot client with the bot token: </p>
+    <pre><code class="language-python">
+import discord
+
+client = discord.Client()
+client.run("your bot token")
+    </code></pre>
+    <p>When you run the script, you should see your bot is coming online in the server.</p>
+</section>
