--- a/programming/python/discord-py/setup.html
+++ b/programming/python/discord-py/setup.html
@@ -35,7 +35,7 @@ permalink: /programming/python/discord-py/setup/
     <p>Then, we can see a big box with lots of checkboxes with the label "Scopes". Check off the "bot" scope. Then, you should see a big box of permissions for our bot. Since we are only testing our bot and not actually using it, we can simply check of "Administrator" which gives the bot administrator permission: </p>
     <img src="/images/programming/python/discord-py/url-generator-scopes.png">
     <p>Then, below the bot permissions, you should see your generated URL. Copy it and paste it into your browser. Then, you can select the server you just created and now, you should see your bot is in the server!</p>
-    <img src="/images/programming/python/discord-py/url-generator-generated-url.png" height="200">
+    <img src="/images/programming/python/discord-py/url-generator-generated-url.png" style="height: 50%;width:50%;">
 </section>
 
 <section>
