--- a/programming/python/discord-py/your-first-discord-py-bot.html
+++ b/programming/python/discord-py/your-first-discord-py-bot.html
@@ -17,3 +17,21 @@ client.run("your bot token")
     </code></pre>
     <p>When you run the script, you should see your bot is coming online in the server.</p>
 </section>
+
+<section>
+    <h2>Receiving Messages</h2>
+    <p>To receive messages, we can use an event when a message is sent in the server: </p>
+    <pre><code class="language-python">
+import discord
+
+client = discord.Client()
+
+@client.event
+async def on_message(message):
+    print(message.content)
+
+client.run("token")
+    </code></pre>
+    <p>The above code prints out the contents of every message sent in the server.</p>
+    <p>Notice how there is an at symbol (<code>@</code>) in front of the <code>on_message</code> function. This is a decorator. Also notice how the function is asynchronous. That means that we don't need to wait for something else to happen in the bot. Right now, our bot is small and it doesn't really matter that much, but imagine your bot became really popular and you would have to wait for everything else.</p>
+</section>
