--- a/programming/python/while-loops.html
+++ b/programming/python/while-loops.html
@@ -5,3 +5,8 @@ permalink: /programming/python/while-loops/
 ---
 
 <h1>Python While Loops</h1>
+
+<section>
+    <h2>What is a While Loop?</h2>
+    <p>A type of loop that runs as long as a condition is true.</p>
+</section>
