--- a/programming/python/bottle/your-first-bottle-website.html
+++ b/programming/python/bottle/your-first-bottle-website.html
@@ -23,3 +23,8 @@ run(port=8080)
     <h2>Running the Code</h2>
     <p>Run the code as you would run any other Python program. Once you run it, when you go to <a href="localhost:8080">localhost:8080</a>, you should see <samp>Hello World!</samp>.</p>
 </section>
+
+<section>
+    <h2>Code Breakdown</h2>
+    <p>Now, let's break down the code.</p>
+</section>
