python while loop expand

--- a/programming/python/while-loops.html
+++ b/programming/python/while-loops.html
@@ -8,5 +8,9 @@ permalink: /programming/python/while-loops/
 
 <section>
     <h2>What is a While Loop?</h2>
-    <p>A type of loop that runs as long as a condition is true.</p>
+    <p>A while loop is like an if statement, but it runs the code inside the loop as long as the condition is true. Below is the format of a while loop: </p>
+    <pre><code class="language-python">
+while <i>condition</i>:
+    # do something
+    </code></pre>
 </section>
