--- a/programming/python/bottle/your-first-bottle-website.html
+++ b/programming/python/bottle/your-first-bottle-website.html
@@ -26,5 +26,6 @@ run(port=8080)
 
 <section>
     <h2>Code Breakdown</h2>
-    <p>Now, let's break down the code.</p>
+    <p>Now, let's break down the code we just wrote.</p>
+    <p>On the first line, we have <pre><code class="langauge-python">from bottle import route, run</code></pre> We do this to import a couple of different functions from the <code>bottle</code> module we installed in the last tutorial.</p>
 </section>
