should be an adverb

--- a/programming/python/discord-py/your-first-discord-py-bot.html
+++ b/programming/python/discord-py/your-first-discord-py-bot.html
@@ -68,5 +68,5 @@ async def on_message(message):
 
 client.run("token")
     </code></pre>
-    <p>The <code>await</code> keyword is used to make the message sending asynchronous.</p>
+    <p>The <code>await</code> keyword is used to make the message sending asynchronously.</p>
 </section>
