--- a/programming/python/cool-projects/5-password-generator.html
+++ b/programming/python/cool-projects/5-password-generator.html
@@ -18,6 +18,14 @@ permalink: /programming/python/cool-projects/5-password-generator/
     <p>We already know what the <code>string</code> module is, so now let's start using it.</p>
     <section>
         <h3>Generating Random Letters</h3>
-        <p>The <code>string</code> module ships with a lot of useful variables. One of them is <code>ascii_letters</code>. We can access this by typing <code>string.ascii_letters</code>.</p>
+        <p>The <code>string</code> module ships with a lot of useful variables. One of them is <code>ascii_letters</code>, which is basically a string of all the uppercase and lowercase characters. We can access this by typing <code>string.ascii_letters</code>.</p>
     </section>
+</section>
+
+<section>
+    <h2>Extensions</h2>
+    <p>Fun extension ideas:</p>
+    <ul>
+        <li>Add the ability to use number and special characters</li>
+    </ul>
 </section>
