--- a/programming/python/bottle/your-first-bottle-website.html
+++ b/programming/python/bottle/your-first-bottle-website.html
@@ -28,4 +28,15 @@ run(port=8080)
     <h2>Code Breakdown</h2>
     <p>Now, let's break down the code we just wrote.</p>
     <p>On the first line, we have <pre><code class="langauge-python">from bottle import route, run</code></pre> We do this to import a couple of different functions from the <code>bottle</code> module we installed in the last tutorial. The <code>run</code> function is used to run our server and the <code>route</code> function is used to create <a href="/programming/python/bottle/routes/">routes</a> for our server.</p>
+    <p>After, we have </p>
+    <pre><code class="language-python">
+@route('/')
+def hello():
+    return "Hello World!"
+    </code></pre>
+    <p>Notice how this starts with</p>
+    <pre><code class="language-python">
+@route('/')
+    </code></pre>
+    <p>This is called a <i>decorator</i> function, meaning that it modifies the <code>hello</code> function.</p>
 </section>
