--- a/programming/python/discord-py/setup.html
+++ b/programming/python/discord-py/setup.html
@@ -30,7 +30,7 @@ permalink: /programming/python/discord-py/setup/
 
 <section>
     <h2>Inviting Our Bot to the Server</h2>
-    <p>now, we of course need our bot to be in the server. We can go to our bot application page and in the sidebar, click on the "OAuth2" tab. Once we click on it, we can see a subtab called "URL Generator". This is what we'll be using to generate the URL to invite our bot to our server: </p>
+    <p>Now, we of course need our bot to be in the server. We can go to our bot application page and in the sidebar, click on the "OAuth2" tab. Once we click on it, we can see a subtab called "URL Generator". This is what we'll be using to generate the URL to invite our bot to our server: </p>
     <img src="/images/programming/python/discord-py/url-generator-sidebar.png">
     <p>Then, we can see a big box with lots of checkboxes with the label "Scopes". Check off the "bot" scope. Then, you should see a big box of permissions for our bot. Since we are only testing our bot and not actually using it, we can simply check of "Administrator" which gives the bot administrator permission: </p>
     <img src="/images/programming/python/discord-py/url-generator-scopes.png">
