--- a/programming/python/discord-py/sending-and-receiving-messages.html
+++ b/programming/python/discord-py/sending-and-receiving-messages.html
@@ -1,10 +1,10 @@
 ---
 layout: discord-py
-title: Your First Discord.py Bot
-permalink: /programming/python/discord-py/your-first-discord-py-bot/
+title: Discord.py Sending and Receiving Messages
+permalink: /programming/python/discord-py/sending-and-receiving-messages/
 ---
 
-<h1>Your First Discord.py Bot</h1>
+<h1>Discord.py Sending and Receiving Messages</h1>
 
 <section>
     <h2>Connecting to the Bot</h2>
