--- a/programming/python/pymongo/setup.html
+++ b/programming/python/pymongo/setup.html
@@ -8,7 +8,7 @@ permalink: /programming/python/pymongo/setup/
 
 <section>
     <h2>Setting up a MongoDB Database</h2>
-    <p>Before we can do anything, we of course need to set up a MongoDB database. There are two options. First, we could download ad MongoDB database onto our computer. The second option, and the one we'll go with, is hosting our database in the cloud. Luckily, MongoDB has a free plan that we can use for experimentation. To do this, go to <a href="https://www.mongodb.com/cloud/atlas">https://www.mongodb.com/cloud/atlas</a> and set it up.</p>
+    <p>Before we can do anything, we of course need to set up a MongoDB database. There are two options. First, we could download ad MongoDB database onto our computer. The second option, and the one we'll go with, is hosting our database in the cloud. Luckily, MongoDB has a free plan that we can use for experimentation. To do this, go to <a href="https://www.mongodb.com/cloud/atlas">https://www.mongodb.com/cloud/atlas</a> and go through the options to set up a database.</p>
 </section>
 
 <section>
