java intro expand

--- a/programming/java/index.html
+++ b/programming/java/index.html
@@ -8,6 +8,11 @@ permalink: /programming/java/
 
 <section>
     <h2>What is Java?</h2>
-    <p>Java is a programming language</p>
+    <p>Java is an object-oriented programming language, which means that Java is based on the concept of a class. Java code is first compiled into bytecode, which ends in a ".class". You can then run your bytecode on any computer with the Java Virtual Machine. Java is one of the world's most popular programming languages. </p>
     <img src="/images/programming/java/java-logo.png" alt="Java Logo">
+</section>
+
+<section>
+    <h2>History</h2>
+    <p>Java was created by James Gosling at Sun Microsystems and was first released in 1995. Sun was later acquired by Oracle, which is now the developer of Java.</p>
 </section>
