update tutorial index

--- a/tutorial-index.html
+++ b/tutorial-index.html
@@ -31,23 +31,23 @@ layout: default
                 </ul>
             </li>
             <li><a href="/programming/cpp/">C++</a></li>
-            <!--<li><a href="/programming/java/">Java</a></li>-->
+            <li><a href="/programming/java/">Java</a></li>
             <li><a href="/programming/git/">Git</a></li>
             <li><a href="/programming/jekyll/">Jekyll</a></li>
         </ul>
     </li>
-    <!--<li><a href="/math/">Math</a>
+    <li><a href="/math/">Math</a>
         <ul>
-            <li><a href="/math/arithmetic/">Arithmetic</a></li>
+            <!--<li><a href="/math/arithmetic/">Arithmetic</a></li>-->
             <li><a href="/math/algebra/">Algebra</a></li>
-            <li><a href="/math/geometry/">Geometry</a>
+            <!--<li><a href="/math/geometry/">Geometry</a>
                 <ul>
                     <li><a href="/math/geometry/trigonometry/">Trigonometry</a></li>
                 </ul>
             </li>
             <li><a href="/math/probability/">Probability</a></li>
-            <li><a href="/math/calculus/">Calculus</a></li>
+            <li><a href="/math/calculus/">Calculus</a></li>-->
         </ul>
-    </li>-->
+    </li>
 </ul>
 
