--- a/programming/python/bottle/your-first-bottle-website.html
+++ b/programming/python/bottle/your-first-bottle-website.html
@@ -38,5 +38,5 @@ def hello():
     <pre><code class="language-python">
 @route('/')
     </code></pre>
-    <p>This is called a <i>decorator</i> function, meaning that it modifies the <code>hello</code> function. In this case, it makes the <code>hello</code> function a route for our page.</p>
+    <p>This is called a <i>decorator</i> function, meaning that it modifies the <code>hello</code> function. In this case, it makes the <code>hello</code> function a route for our page. For the <code>route</code> function, we need to pass in a route for Bottle to use. The <code>/</code> is the home page for our server.</p>
 </section>
