--- a/programming/python/bottle/your-first-bottle-website.html
+++ b/programming/python/bottle/your-first-bottle-website.html
@@ -21,7 +21,7 @@ run(port=8080)
 
 <section>
     <h2>Running the Code</h2>
-    <p>Run the code as you would run any other Python program. Once you run it, when you go to <a href="localhost:8080">localhost:8080</a>, you should see <samp>Hello World!</samp>.</p>
+    <p>Run the code as you would run any other Python program. Once you run it, when you go to <a href="localhost:8080">localhost:8080</a>, you should see <samp>Hello World!</samp> displayed on the webpage.</p>
 </section>
 
 <section>
